<resources>
    <string name="app_name">films_viu</string>
    <string name="peliculas">Peliculas</string>
    <string name="listado_de_peliculas">Listado de peliculas</string>

    <string name="categories_films">Categorías de películas</string>
    <string name="content_description_media">image header card film</string>
    <string name="add_film_txt">Añade la pelicula</string>
    <string name="action">Acción</string>
    <string name="suspenso">Suspenso</string>
    <string name="romance">Romance</string>
    <string name="create_film">Crear Película</string>
    <string name="add_duration_txt">Añade la duración</string>
    <string name="add_link_img_film_txt">Añade el link de la imagen</string>
    <string name="imgsmenu">films imgs menu</string>

    <string name="animes">Animes</string>
    <string name="listado_de_animes">Listado de animes</string>
    <string name="cineanimeplus">CINEANIMEPLUS</string>

</resources>