<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cineanimeplus"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btnFilms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/peliculas" />
    <Button
        android:id="@+id/btnAnimes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animes" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:contentDescription="@string/imgsmenu"
        android:src="@drawable/img2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:contentDescription="@string/imgsmenu"
        android:src="@drawable/img1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:contentDescription="@string/imgsmenu"
        android:src="@drawable/img3" />

</LinearLayout>