<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:orientation="vertical"
    tools:context=".films.FilmsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listado_de_peliculas"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories_films"
        android:textAllCaps="true"
        android:textColor="@color/subtitle_text"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="22dp"
        android:text="@string/peliculas"
        android:textAllCaps="true"
        android:textColor="@color/subtitle_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFilms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
